Added content to Infrastructure project: • Added a CsvFileBuilder and TodoItemRecordMap rule • Added Identity service related classes • Added Persistence Configurations and DbContext class and seed class • Added DateTimeService
Signed-off-by: Rares Enache <raresenache@gmail.com>

--- a/Weatherly/Application/Infrastructure/Infrastructure.csproj
+++ b/Weatherly/Application/Infrastructure/Infrastructure.csproj
@@ -1,10 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AssemblyName>Weatherly.Infrastructure</AssemblyName>
     <RootNamespace>Weatherly.Infrastructure</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.ApiAuthorization.IdentityServer" Version="3.1.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.4" />
+    <PackageReference Include="CsvHelper" Version="15.0.5" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AppLogic\AppLogic.csproj" />
