Completed Infrastructure project: • Created Initial Migration for ApplicationDbContext • Removed duplicate ApplicationDbContext from Blazor project and removed its references to the services object in Startup.cs • Updated DefaultConnection string for DB in Blazor project • Completed AppLogic project's integration tests
Signed-off-by: Rares Enache <raresenache@gmail.com>

--- a/Weatherly/Application/BlazorUI/appsettings.json
+++ b/Weatherly/Application/BlazorUI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BlazorUI-DE4A3C17-992C-4CC6-BF8D-A7106B2D1317;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=DESKTOP-L93KJL6;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
