--- a/Weatherly/Application/Infrastructure/Infrastructure.csproj
+++ b/Weatherly/Application/Infrastructure/Infrastructure.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\AppLogic\AppLogic.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
